kubernetes-manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alix-docs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/upstream-vhost: $host
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Content-Security-Policy default-src 'self'";
      more_set_headers "X-Frame-Options: SAMEORIGIN";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "Referrer-Policy: no-referrer-when-downgrade";
      more_set_headers "Permissions-Policy: none";
spec:
  ingressClassName: nginx-public
  rules:
    - host: docs.alix.lol
      http:
        paths:
          - backend:
              service:
                name: alix-docs
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - docs.alix.lol
      secretName: docs-alix-lol
